# paja

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml.example  generate_models.sh
generate_models/: update_datatypes.sed  update_model_fields.sed
migrations/2025-08-24-072001_users/: down.sql  up.sql
sql/: create_user.sql
src/: claims.rs  cotizaciones.rs  db.rs  gemini.rs  main.rs  models.rs  personas.rs  schema.rs
templates/: cotizaciones.html.hbs
utils/: config.shlib  data.shlib  drop_db.sh  init_db.sh  paja  restore_db.sh
www/static/: index.html
www/static/css/: style.css
